--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-MONGODB_URI=mongodb://localhost:27017/group_project
 PORT=3000
-SECRET_KEY=your_secret_key_here
+SESSION_SECRET=superSecretKey123
+MONGODB_URI=mongodb+srv://projectUser:StrongPassword123@cluster0.p0d7f4x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=myVerySecretKey123
+STUDENT_NAME=Udith Madushan Jayasinghe Jayasinghe Arachchige
+STUDENT_ID=S225476975
